# top_word

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  setup.cfg  task.md  wait-for
docker/redis/: redis.conf
tests/api/: test_endpoint.py  test_service.py
tests/word_consumer/: test_openai_api.py  test_word_consumer.py
top_word/: common.py  exception_handlers.py  main.py
top_word/api/: api.py  api_service.py  fastapi_app.py
top_word/common/: exception_handlers.py  exceptions.py  models.py
top_word/word_consumer/: openai_api.py  word_consumer.py  wordsmith_api.py
